minijinja/tests/snapshots/test_templates__vm@err_too_large_integer.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ 10234237582375823572357238572385723582375827582375238572385723857238572385723523758 }}"
info: {}
input_file: minijinja/tests/inputs/err_too_large_integer.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "invalid integer (too large)",
    name: "err_too_large_integer.txt",
    line: 1,
}

syntax error: invalid integer (too large) (in err_too_large_integer.txt:1)
-------------------------- err_too_large_integer.txt --------------------------
   1 > {{ 10234237582375823572357238572385723582375827582375238572385723857238572385723523758 }}
     i                                                                                       ^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
